scrollbar fix

--- a/css/main.css
+++ b/css/main.css
@@ -195,6 +195,16 @@ h2 {
   margin-left: 20px;
   overflow: auto;
 }
+.industry-item::-webkit-scrollbar {
+  width: 1px;
+}
+.industry-item::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+.industry-item::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid #1772eb;
+}
 .industry-item h2 {
   font-family: "PT Sans", sans-serif;
   font-size: 25px;
